utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ExcludeNeededModule.ide
package valid

typedef module ExcludeNeededModule {
    configuration config: ExcludeNeededConfiguration {

    }
}
