utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeNeededModule.ide
package invalid

typedef module ExcludeNeededModule {
    configuration config: ExcludeNeededConfiguration {

    }
}
